# komtek_test_task

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
terms_srv/: manage.py
terms_srv/app_terms/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  schemas.py  serializers.py  urls.py
terms_srv/app_terms/migrations/: 0001_initial.py  0002_alter_directoryitem_options.py  0003_alter_directory_title.py  0004_alter_directory_options.py
terms_srv/terms_srv/: settings.py  urls.py  wsgi.py
test_data/app_terms/fixtures/: Directory.yaml  Directory.yml  DirectoryItem.yaml  DirectoryItem.yml  DirectoryVersion.yml
